# Verifiable-SLAs

./: .gitignore  README.md
infra-storage/: backend-server.js  docker-compose.yml
monitors/active/: Dockerfile  app.js  docker-compose.yml
monitors/active/monitor-configs/: config-summary.json  keys.json  passive-monitor-config.json
monitors/pasive/: app.js  docker-compose.yml  load-passive-config.js  package.json
monitors/pasive/monitor-configs/: passive-monitor-config.json
sla-contracts/: package-lock.json  package.json
sla-contracts/contracts/: SLAConfiguration.sol  SLAEvidenceRegistry.sol
sla-contracts/test/: SLAEvidenceRegistry.test.js
slo-engine/batch-sli/: Cargo.toml
slo-engine/batch-sli/res/: measurement-proof-0-8192.json  mock-batch-data-min-128.json  mock-batch-data-min-256.json  mock-batch-data.json  mock-verification-minimal-128.json  mock-verification-minimal.json
slo-engine/batch-sli/src/: main.rs
slo-engine/ecdsa/batch-sli/res/: measurement-proof-0-1024.json  measurement-proof-0.json  mock-batch-data-min.json
slo-engine/ecdsa/individual-sli/core/: Cargo.toml
slo-engine/ecdsa/individual-sli/methods/: Cargo.toml
slo-engine/individual-sli/: Cargo.toml
slo-engine/individual-sli/methods/guest/: Cargo.toml
slo-engine/individual-sli/res/: measurement-proof-0-1024.json  measurement-proof-0-8192.json  measurement-proof-0.json  mock-batch-data-min-128.json  mock-batch-data-min.json  mock-verification-minimal-1024.json  mock-verification-minimal-128.json  mock-verification-minimal-512.json
slo-engine/individual-sli/src/: main.rs
(+1 files in other folders)
